@@ -94,6 +94,7 @@ wxMSW:
 
 - Corrected wxStaticBox label appearance when its foreground colour was set:
   it didn't respect font size nor background colour then (Juan Antonio Ortega)
+- Don't lose combobox text when it's opened and closed (Kolya Kosenko)
 
 2.8.3
 -----
